pod-security.yml
# security at Container level
apiVersion: v1
kind: Pod
metadata:
  name: web-pod
spec:
  containers:
    - name: ubuntu
      image: ubuntu
      command: ["sleep", "3600"]
      securityContext:
        runAsUser: 1000
        capabilities:
          add: ["MAC_ADMIN"]


# Security at Pod level

# apiVersion: v1
# kind: Pod
# metadata:
#   name: web-pod
# spec:
#   securityContext:
#     runAsUser: 1000
#     capabilities:
#       add: ["MAC_ADMIN"]
#   containers:
#     - name: ubuntu
#       image: ubuntu
#       command: ["sleep", "3600"]
      

# apiVersion: v1
# kind: Pod
# metadata:
#   name: multi-pod
# spec:
#   securityContext:
#     runAsUser: 1001
#   containers:
#   -  image: ubuntu
#      name: web
#      command: ["sleep", "5000"]
#      securityContext:
#       runAsUser: 1002

#   -  image: ubuntu
#      name: sidecar
#      command: ["sleep", "5000"]
